resources/css/app.css
@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
@import 'prismjs/themes/prism.min.css';
@tailwind base;
@tailwind components;
@tailwind utilities;

/*
  The default border color has changed to `currentColor` in Tailwind CSS v4,
  so we've added these compatibility styles to make sure everything still
  looks the same as it did with Tailwind CSS v3.

  If we ever want to remove these styles, we need to add an explicit border
  color utility to any element that depends on these defaults.
*/
@layer base {

  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentColor);
  }

  button:not(:disabled),
  [role='button']:not(:disabled) {
    cursor: pointer;
  }

  body {
    @apply relative font-normal font-outfit z-1 bg-gray-50;
  }
}

@layer components {
  .menu-item {
    @apply relative flex items-center w-full gap-3 px-3 py-2 font-medium rounded-lg text-theme-sm;
  }

  .menu-item-active {
    @apply bg-brand-50 text-brand-500 dark:bg-brand-500/10 dark:text-brand-400;
  }

  .menu-item-inactive {
    @apply text-gray-700 hover:bg-gray-100 group-hover:text-gray-700 dark:text-gray-300 dark:hover:bg-white/5 dark:hover:text-gray-300;
  }

  .menu-item-icon {
    @apply text-gray-500 group-hover:text-gray-700 dark:text-gray-400;
  }

  .menu-item-icon-active {
    @apply text-brand-500 dark:text-brand-400;
  }

  .menu-item-icon-inactive {
    @apply text-gray-500 group-hover:text-gray-700 dark:text-gray-400 dark:group-hover:text-gray-300;
  }

  .menu-item-arrow {
    @apply relative;
  }

  .menu-item-arrow-active {
    @apply rotate-180 text-brand-500 dark:text-brand-400;
  }

  .menu-item-arrow-inactive {
    @apply text-gray-500 group-hover:text-gray-700 dark:text-gray-400 dark:group-hover:text-gray-300;
  }

  .menu-dropdown-item {
    @apply relative flex items-center gap-3 rounded-lg px-3 py-2.5 text-theme-sm font-medium;
  }

  .menu-dropdown-item-active {
    @apply bg-brand-50 text-brand-500 dark:bg-brand-500/10 dark:text-brand-400;
  }

  .menu-dropdown-item-inactive {
    @apply text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-white/5;
  }

  .menu-dropdown-badge {
    @apply text-success-color-600 dark:text-success-color-500 block rounded-full px-2.5 py-0.5 text-xs font-medium uppercase;
  }

  .menu-dropdown-badge-active {
    @apply bg-success-color-100 dark:bg-success-color-500/20;
  }

  .menu-dropdown-badge-inactive {
    @apply bg-success-color-50 group-hover:bg-success-color-100 dark:bg-success-color-500/15 dark:group-hover:bg-success-color-500/20;
  }

  .menu-dropdown-badge-pro {
    @apply text-brand-600 dark:text-brand-500 block rounded-full px-2.5 py-0.5 text-xs font-medium uppercase;
  }

  .menu-dropdown-badge-pro-active {
    @apply bg-brand-100 dark:bg-brand-500/20;
  }

  .menu-dropdown-badge-pro-inactive {
    @apply bg-brand-50 group-hover:bg-brand-100 dark:bg-brand-500/15 dark:group-hover:bg-brand-500/20;
  }

  .no-scrollbar {
    /* Chrome, Safari and Opera */
    &::-webkit-scrollbar {
      display: none;
    }

    -ms-overflow-style: none;
    /* IE and Edge */
    scrollbar-width: none;
    /* Firefox */
  }

  .custom-scrollbar {
    &::-webkit-scrollbar {
      @apply w-1.5;
    }

    &::-webkit-scrollbar-track {
      @apply rounded-full;
    }

    &::-webkit-scrollbar-thumb {
      @apply bg-gray-200 rounded-full dark:bg-gray-700;
    }
  }
}

.dark .custom-scrollbar::-webkit-scrollbar-thumb {
  background-color: #344054;
}

@layer utilities {

  /* For Remove Date Icon */
  input[type='date']::-webkit-inner-spin-button,
  input[type='time']::-webkit-inner-spin-button,
  input[type='date']::-webkit-calendar-picker-indicator,
  input[type='time']::-webkit-calendar-picker-indicator {
    display: none;
    -webkit-appearance: none;
  }
}

.sidebar:hover {
  width: 290px;
}

.sidebar:hover .logo {
  display: block;
}

.sidebar:hover .logo-icon {
  display: none;
}

.sidebar:hover .sidebar-header {
  justify-content: space-between;
}

.sidebar:hover .menu-group-title {
  display: block;
}

.sidebar:hover .menu-group-icon {
  display: none;
}

.sidebar:hover .menu-item-text {
  display: inline;
}

.sidebar:hover .menu-item-arrow {
  display: block;
}

.sidebar:hover .menu-dropdown {
  display: flex;
}

.tableCheckbox:checked~span span {
  @apply opacity-100;
}

.tableCheckbox:checked~span {
  @apply border-brand-500 bg-brand-500;
}

